--- a/client/src/App.xaml
+++ b/client/src/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="Jaroszek.PoC.SignalRChat.Client.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Jaroszek.PoC.SignalRChat.Client"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
-</Application>
+﻿<unity:PrismApplication
+    x:Class="Jaroszek.PoC.SignalRChat.Client.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:Jaroszek.PoC.SignalRChat.Client"
+    xmlns:unity="http://prismlibrary.com/">
+    <Application.Resources />
+</unity:PrismApplication>
