added behaviors, model, bindings

--- a/client/src/Views/ShellView.xaml
+++ b/client/src/Views/ShellView.xaml
@@ -2,12 +2,29 @@
     x:Class="Jaroszek.PoC.SignalRChat.Client.Views.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:Jaroszek.PoC.SignalRChat.Client"
+    xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    Title="MainWindow"
+    xmlns:md="https://github.com/fantasticfiasco/mvvm-dialogs"
+    xmlns:mvvm="http://prismlibrary.com/"
+    xmlns:viewModels1="clr-namespace:Jaroszek.PoC.SignalRChat.Client.ViewModels"
+    Title="{Binding Title, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
     Width="800"
     Height="450"
+    d:DataContext="{d:DesignInstance viewModels1:ShellViewModel,
+                                     IsDesignTimeCreatable=True}"
+    md:DialogServiceViews.IsRegistered="True"
+    mvvm:ViewModelLocator.AutoWireViewModel="True"
     mc:Ignorable="d">
+    <b:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding WindowLoadedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+        </i:EventTrigger>
+        <i:EventTrigger EventName="Closed">
+            <i:InvokeCommandAction Command="{Binding WindowClosedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+        </i:EventTrigger>
+    </b:Interaction.Triggers>
+
     <Grid />
 </Window>
