builds shellView and add command and added method to connect, disconnected and send message

--- a/client/src/Views/ShellView.xaml
+++ b/client/src/Views/ShellView.xaml
@@ -10,8 +10,8 @@
     xmlns:mvvm="http://prismlibrary.com/"
     xmlns:viewModels1="clr-namespace:Jaroszek.PoC.SignalRChat.Client.ViewModels"
     Title="{Binding Title, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-    Width="600"
-    Height="350"
+    Width="610"
+    Height="360"
     d:DataContext="{d:DesignInstance viewModels1:ShellViewModel,
                                      IsDesignTimeCreatable=True}"
     md:DialogServiceViews.IsRegistered="True"
@@ -32,17 +32,37 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="Auto" />
-            </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Margin="10">
+            <TextBlock Margin="5,5,7,5" Text="Wprowadz wiadomość do wysłania" />
+            <TextBox
+                Margin="5,5,7,5"
+                Padding="2"
+                Text="{Binding Message, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+
+            <StackPanel Orientation="Horizontal">
+                <Button
+                    Width="288"
+                    Margin="5,5,7,5"
+                    Command="{Binding SendMessageCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                    Content="Send" />
+                <Button
+                    Width="80"
+                    Margin="5,5,5,5"
+                    Command="{Binding ConnectCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                    Content="Connected" />
+                <Button
+                    Width="80"
+                    Margin="5,5,5,5"
+                    Command="{Binding DisconnectCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                    Content="Disconnected" />
+            </StackPanel>
+            <ListView
+                MinHeight="180"
+                Margin="5"
+                ItemsSource="{Binding MessagesReceived, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+        </StackPanel>
 
 
-
-        </Grid>
         <StatusBar Grid.Row="3" Grid.Column="0">
             <StatusBarItem HorizontalAlignment="Left">
                 <Label Padding="0" Content="{Binding Status, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
