--- a/client/src/Views/ShellView.xaml
+++ b/client/src/Views/ShellView.xaml
@@ -33,7 +33,7 @@
         </Grid.RowDefinitions>
 
         <StackPanel Grid.Row="0" Margin="10">
-            <TextBlock Margin="5,5,7,5" Text="Wprowadz wiadomość do wysłania" />
+            <TextBlock Margin="5,5,7,5" Text="{DynamicResource TypeYourMessage}" />
             <TextBox
                 Margin="5,5,7,5"
                 Padding="2"
@@ -44,17 +44,17 @@
                     Width="288"
                     Margin="5,5,7,5"
                     Command="{Binding SendMessageCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                    Content="Send" />
+                    Content="{DynamicResource SendButton}" />
                 <Button
                     Width="80"
                     Margin="5,5,5,5"
                     Command="{Binding ConnectCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                    Content="Connected" />
+                    Content="{DynamicResource Connect}" />
                 <Button
                     Width="80"
                     Margin="5,5,5,5"
                     Command="{Binding DisconnectCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                    Content="Disconnected" />
+                    Content="{DynamicResource Disconnect}" />
             </StackPanel>
             <ListView
                 MinHeight="180"
