--- a/client/src/Views/ShellView.xaml
+++ b/client/src/Views/ShellView.xaml
@@ -16,6 +16,7 @@
                                      IsDesignTimeCreatable=True}"
     md:DialogServiceViews.IsRegistered="True"
     mvvm:ViewModelLocator.AutoWireViewModel="True"
+    WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <b:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -37,6 +38,7 @@
             <TextBox
                 Margin="5,5,7,5"
                 Padding="2"
+                IsEnabled="{Binding IsVisibilityDisconnected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                 Text="{Binding Message, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
 
             <StackPanel Orientation="Horizontal">
@@ -44,17 +46,21 @@
                     Width="288"
                     Margin="5,5,7,5"
                     Command="{Binding SendMessageCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                    Content="{DynamicResource SendButton}" />
+                    Content="{DynamicResource SendButton}"
+                    IsEnabled="{Binding IsVisibilityDisconnected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                 <Button
                     Width="80"
                     Margin="5,5,5,5"
                     Command="{Binding ConnectCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                    Content="{DynamicResource Connect}" />
+                    Content="{DynamicResource Connect}"
+                    IsEnabled="{Binding IsVisibilityConnected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
                 <Button
                     Width="80"
                     Margin="5,5,5,5"
                     Command="{Binding DisconnectCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                    Content="{DynamicResource Disconnect}" />
+                    Content="{DynamicResource Disconnect}"
+                    IsEnabled="{Binding IsVisibilityDisconnected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+
             </StackPanel>
             <ListView
                 MinHeight="180"
@@ -63,11 +69,47 @@
         </StackPanel>
 
 
-        <StatusBar Grid.Row="3" Grid.Column="0">
+        <StatusBar Grid.Row="1" Grid.Column="0">
             <StatusBarItem HorizontalAlignment="Left">
-                <Label Padding="0" Content="{Binding Status, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Canvas
+                        Grid.Row="0"
+                        Width="18"
+                        Height="18"
+                        Visibility="{Binding Path=IsConnectToSignalR, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
+                        <Canvas>
+                            <Path
+                                Data="M10.454,5.847c0.477,-0.255,1.02,-0.4,1.596,-0.4c1.905,0,3.45,1.579,3.45,3.527c0,1.948,-1.545,3.527,-3.45,3.527h-8.8C1.731,12.5,0.5,11.241,0.5,9.689c0,-1.301,0.865,-2.395,2.038,-2.715C2.81,4.9,4.547,3.3,6.65,3.3C8.352,3.3,9.814,4.348,10.454,5.847c0.222,0.519,0.346,1.093,0.346,1.695"
+                                Fill="#92CBEE"
+                                Stroke="#0964B0"
+                                StrokeMiterLimit="5"
+                                StrokeThickness="1" />
+                        </Canvas>
+                    </Canvas>
+                    <Canvas
+                        Grid.Row="0"
+                        Width="16"
+                        Height="16"
+                        Visibility="{Binding Path=IsDisconnectToSignalR, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
+                        <Canvas>
+                            <Path
+                                Data="M10.454,5.847c0.477,-0.255,1.02,-0.4,1.596,-0.4c1.905,0,3.45,1.579,3.45,3.527c0,1.948,-1.545,3.527,-3.45,3.527h-8.8C1.731,12.5,0.5,11.241,0.5,9.689c0,-1.301,0.865,-2.395,2.038,-2.715C2.81,4.9,4.547,3.3,6.65,3.3C8.352,3.3,9.814,4.348,10.454,5.847c0.222,0.519,0.346,1.093,0.346,1.695"
+                                Fill="#FFFFFF"
+                                Stroke="#383838"
+                                StrokeMiterLimit="5"
+                                StrokeThickness="1" />
+                        </Canvas>
+                    </Canvas>
+                    <Label
+                        Grid.Column="1"
+                        Padding="0"
+                        Content="{Binding Status, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" />
+                </Grid>
             </StatusBarItem>
-
         </StatusBar>
 
 
